refactor: enrich event contract with match context